# allfeat-contracts

./: Cargo.toml  README.md  test-all-examples.sh
.github/workflows/: rust.yaml
examples/aft22/: Cargo.toml  README.md
examples/aft22/src/: lib.rs
examples/aft22_extensions/burnable/: Cargo.toml  README.md
examples/aft22_extensions/burnable/src/: lib.rs
examples/aft22_extensions/capped/: Cargo.toml  README.md
examples/aft22_extensions/capped/src/: lib.rs
examples/aft22_extensions/flashmint/: Cargo.toml  README.md
examples/aft22_extensions/flashmint/src/: lib.rs
examples/aft22_extensions/metadata/: Cargo.toml  README.md
examples/aft22_extensions/metadata/src/: lib.rs
examples/aft22_extensions/mintable/: Cargo.toml  README.md
examples/aft22_extensions/mintable/src/: lib.rs
examples/aft22_extensions/wrapper/: Cargo.toml  README.md
examples/aft22_extensions/wrapper/src/: lib.rs
examples/aft34/: Cargo.toml  README.md
examples/aft34/src/: lib.rs
examples/aft34_extensions/burnable/: Cargo.toml  README.md
examples/aft34_extensions/burnable/src/: lib.rs
examples/aft34_extensions/enumerable/: Cargo.toml  README.md
examples/aft34_extensions/enumerable/src/: lib.rs
examples/aft34_extensions/metadata/: Cargo.toml  README.md
examples/aft34_extensions/metadata/src/: lib.rs
examples/aft34_extensions/mintable/: Cargo.toml  README.md
examples/aft34_extensions/mintable/src/: lib.rs
examples/aft34_extensions/payable_mint/: Cargo.toml  README.md
examples/aft34_extensions/payable_mint/src/: lib.rs
examples/aft34_extensions/uri_storage/: Cargo.toml  README.md
examples/aft34_extensions/uri_storage/src/: lib.rs
examples/aft37/: Cargo.toml
examples/aft37/src/: lib.rs
examples/aft37_extensions/batch/: Cargo.toml
examples/aft37_extensions/batch/src/: lib.rs
examples/aft37_extensions/burnable/: Cargo.toml
examples/aft37_extensions/burnable/src/: lib.rs
examples/aft37_extensions/enumerable/: Cargo.toml  README.md
examples/aft37_extensions/enumerable/src/: lib.rs
examples/aft37_extensions/metadata/: Cargo.toml
examples/aft37_extensions/metadata/src/: lib.rs
examples/aft37_extensions/mintable/: Cargo.toml
examples/aft37_extensions/mintable/src/: lib.rs
examples/aft37_extensions/payable_mint/: Cargo.toml  README.md
examples/aft37_extensions/payable_mint/src/: lib.rs
examples/aft37_extensions/uri_storage/: Cargo.toml  README.md
examples/aft37_extensions/uri_storage/src/: lib.rs
examples/ownable/: Cargo.toml  README.md
examples/ownable/src/: lib.rs
examples/test_helpers/: Cargo.toml
examples/test_helpers/src/: lib.rs
extensions/artists/: Cargo.toml
extensions/artists/src/: errors.rs  extension.rs  impl_runtime.rs  lib.rs  types.rs
extensions/artists/test_contract/: Cargo.toml
extensions/artists/test_contract/src/: lib.rs
lang/: Cargo.toml
lang/codegen/: Cargo.toml
lang/codegen/src/: contract.rs  implementation.rs  implementations.rs  internal.rs  lib.rs  metadata.rs
lang/macros/: Cargo.toml
lang/macros/src/: lib.rs
lang/src/: lib.rs
src/: lib.rs
src/token/: mod.rs
src/token/aft22/: aft22.rs  mod.rs
src/token/aft22/extensions/: burnable.rs  capped.rs  flashmint.rs  metadata.rs  mintable.rs  wrapper.rs
src/token/aft22/utils/: token_timelock.rs
src/token/aft34/: aft34.rs  mod.rs
src/token/aft34/extensions/: burnable.rs  enumerable.rs  metadata.rs  mintable.rs  payable_mint.rs  uri_storage.rs
src/token/aft37/: aft37.rs  mod.rs
src/token/aft37/extensions/: batch.rs  burnable.rs  enumerable.rs  metadata.rs  mintable.rs  payable_mint.rs  uri_storage.rs
src/traits/: mod.rs  types.rs
src/traits/aft22/: aft22.rs  mod.rs
src/traits/aft22/extensions/: burnable.rs  capped.rs  metadata.rs  mintable.rs  wrapper.rs
src/traits/aft22/utils/: token_timelock.rs
src/traits/aft34/: aft34.rs  mod.rs
src/traits/aft34/extensions/: burnable.rs  enumerable.rs  metadata.rs  mintable.rs  payable_mint.rs  uri_storage.rs
src/traits/aft37/: aft37.rs  mod.rs
src/traits/aft37/extensions/: batch.rs  burnable.rs  enumerable.rs  metadata.rs  mintable.rs  payable_mint.rs  uri_storage.rs
src/traits/errors/: aft22.rs  aft34.rs  aft37.rs  mod.rs
