[package]
name = "allfeat_contracts_lang"
version = "0.1.0"
authors = ["Allfeat labs <tech@allfeat.com>"]
edition = "2021"

license = "MIT"
repository = "https://github.com/allfeat/allfeat-contracts"
homepage = "https://allfeat.network/"
description = "Aggregator of all allfeat functionality and utils."
keywords = ["wasm", "allfeat", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allfeat_contracts_lang_macros = { version = "~0.1.0", path = "macros", default-features = false }


[lib]
name = "allfeat_contracts_lang"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "allfeat_contracts_lang_macros/std"
]