[package]
name = "my_ownable"
version= "0.1.0"
authors = ["Allfeat labs <tech@allfeat.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
allfeat-contracts = { path = "../..", default-features = false, features = ["aft34"] }
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false, features = ["ownable"] }

[dev-dependencies]
ink_e2e = "4.3.0"
test_helpers = { path = "../test_helpers", default-features = false }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "allfeat-contracts/std",
    "openbrush/std"
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16