[package]
name = "allfeat_contracts_extensions_artists"
version = "0.1.0"
authors = ["Allfeat labs. - tech@allfeat.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ink
ink = { version = "4.3.0", default-features = false }

# general
scale = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
    "max-encoded-len"
] }
scale-info = { version = "2.6.0", default-features = false, features = [
    "derive",
], optional = true }

genres-registry = { version = "1.0.0-dev", default-features = false, git = "https://github.com/Allfeat/genres-registry.git", branch = "master", features = ["ink"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "genres-registry/std"
]