[package]
name = "allfeat_contracts_lang_codegen"
version = "0.1.0"
authors = ["Allfeat labs <tech@allfeat.com>"]
edition = "2021"

include = ["Cargo.toml", "src/**/*.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["parsing", "full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde_json = "1.0.64"
fs2 = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
cargo_metadata = "0.13.1"
unwrap = "1.2.1"
blake2 = "0.9"
heck = "0.3.1"
ink_ir = { version = "4.3.0", default-features = false }
ink_primitives = { version = "4.3.0", default-features = false }
synstructure = "0.12"

openbrush_lang_codegen = {git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false}

[lib]
name = "allfeat_contracts_lang_codegen"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = []