[package]
name = "artists_extension_wrapper"
version= "0.1.0"
authors = ["Allfeat labs <tech@allfeat.com>"]
edition = "2021"

[workspace]

[dependencies]
ink = { version = "4.3.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

allfeat_contracts_extensions_artists = { path = "..", version = "0.1.0", default-features = false, features = ["ink"] }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
name = "artists_extension_wrapper"
path = "src/lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "allfeat_contracts_extensions_artists/std"
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16